--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=billingsoftware
+spring.datasource.url=jdbc:mysql://localhost:3306/billingsoftware
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/api/v1.0
+
+
