--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/billingsoftware
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.application.name=billingsoftware
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_DDL_AUTO}
+server.servlet.context-path=${SERVER_CONTEXT_PATH}
 
-spring.jpa.hibernate.ddl-auto=update
-server.servlet.context-path=/api/v1.0
+aws.access.key=${AWS_ACCESS_KEY}
+aws.secret.key=${AWS_SECRET_KEY}
+aws.region=${AWS_REGION}
+aws.bucket.name=${BUCKET_NAME}
+
+jwt.secret.key=${JWT_TOKEN}
+
+razorpay.key.id=${RAZORPAY_KEY_ID}
+razorpay.key.secret=${RAZORPAY_KEY_SECRET}
 
